[tool.poetry]
name = "intro-algo"
version = "0.1.0"
description = "Introduction to Algorithms"
authors = ["hejun <junhe0618@gmail.com>"]
readme = "README.md"
packages = [{include = "intro_algo"}]

[tool.poetry.dependencies]
python = "^3.9"
graphviz = "^0.20.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
